# FocusTranslator

./: .gitignore  Cargo.toml  README.md  build.rs  installer.iss
.claude/skills/test-hotkey-app/: SKILL.md
.claude/skills/test-hotkey-app/scripts/: test_hotkey_capture.ps1
docs/: BUILD.md  BUILD_AND_CUSTOMIZE.md
examples/: uia_mock.rs
src/: app_state.rs  capture.rs  capture_plan.rs  chip_handler.rs  config.rs  detect.rs  engine.rs  image_edit.rs  image_preview.rs  input_dialog.rs  llama_install.rs  llama_server.rs  llm_api.rs  logdb.rs  logviewer.rs  main.rs  markdown.rs  ocr.rs  oneocr.rs  onnx_translate.rs  onnx_translate_install.rs  overlay.rs  overlay_layout.rs  paddle_install.rs  paddle_ocr.rs  prompt_edit.rs  region.rs  settings.rs  test_util.rs  translate.rs  tray.rs  ui_helpers.rs  uia.rs  util.rs  worker.rs
