[package]
name = "focus-translator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json"] }
base64 = "0.22"
png = "0.18"
sha2 = "0.10"
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs", "download-binaries", "ndarray"] }
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Media_Ocr",
    "Security_Cryptography",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = 2
lto = true
strip = true

[build-dependencies]
winresource = "0.1.31"
